--- a/index.html
+++ b/index.html
@@ -711,7 +711,13 @@
                     </ol>
                 </div>
             </section>
-            <hr class="m-0" />
+            <!-- <hr class="m-0" /> -->
+
+            <!-- Footer -->
+            <footer>
+                Website built with Bootstrap 5 and Vue 3.<br>
+                Copytight &copy; 2022 Bo-Han Chen. All rights reserved.
+            </footer>
         </div>
 
     </body>
