update about section
update about section

--- a/index.html
+++ b/index.html
@@ -117,24 +117,31 @@
                     <div class="subheading mt-0 mb-5">
                         bohan.chen[at]gapp.nthu.edu.tw
                     </div>
-                    <p class="lead mb-5">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat dicta, ducimus provident quia voluptate neque, vitae consequatur iusto incidunt quae repellendus eos a nisi illum earum, porro voluptatem totam perspiciatis.
+                    <p class="lead mb-0 mb-md-5">
+                        LASER PHYSICIST / SCIENTIST / LASER ENGINEER<br><br>
+                        LIGHT is not only essential for our lives but also a critical tool that helps improve science and technologies in modern society. My interest lies in exploring the potential of light, specifically LASER, and developing novel techniques for the academy and the industry with it.
                     </p>
                 </div>
+                <p class="location">
+                    Petra, Jordan
+                </p>
             </section>
             <!-- About-->
             <section class="resume-section" id="about" >
                 <div class="resume-section-content">
-                    <h2 class="mb-4 section-title">
+                    <h2 class="mb-4 pt-5 section-title">
                         About me
                     </h2>
-                    <p class="mb-3">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, earum. Odio veritatis quaerat vitae quibusdam enim et culpa fugit beatae eius eos autem, quam libero itaque maiores ratione vel dolorum!
+                    <p class="mb-4">
+                        As a double-E student, I was taught and trained to think logically, observe things from different aspects, and solve problems like an engineer. And that kind of affects my personality - I like to do things reasonably. I am self-disciplined, and I sometimes make up 'protocols' for myself to follow. I care about details, which occasionally costs me tons of time for correcting stuff that nobody will ever notice.
                     </p>
                     <div class="mb-0">
                         <div class="row d-flex flex-column flex-md-row align-items-md-center">
                             <div class="col-12 col-md-6 d-flex flex-column align-items-center">
                                 <img src="assets/img/about_photo_compressed.jpg" alt="" class="w-100">
+                                <p style="font-size: 14px; color: #888;">
+                                    Zürich, Switzerland
+                                </p>
                             </div>
                             <div class="col-12 col-md-6">
                                 <div class="row flex-wrap">
@@ -263,7 +270,7 @@
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-5 section-title">
+                    <h2 class="mb-5 pt-5 section-title">
                         Experience
                     </h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -397,7 +404,7 @@
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
-                    <h2 class="mb-5 section-title">
+                    <h2 class="mb-5 pt-5 section-title">
                         Education
                     </h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -543,7 +550,7 @@
             <!-- Proficiencies and Skills-->
             <section class="resume-section" id="exp_skill">
                 <div class="resume-section-content">
-                    <h2 class="mb-5 section-title">
+                    <h2 class="mb-5 pt-5 section-title">
                         Expertise & Skills
                     </h2>
                     <div class="skill-category">
@@ -677,7 +684,7 @@
             <!-- Publications-->
             <section class="resume-section" id="publication">
                 <div class="resume-section-content">
-                    <h2 class="mb-5 section-title">
+                    <h2 class="mb-5 pt-5 section-title">
                         Publication List
                     </h2>
                     <ol reversed>
@@ -716,7 +723,7 @@
             <!-- Footer -->
             <footer>
                 Website built with Bootstrap 5 and Vue 3.<br>
-                Copytight &copy; 2022 Bo-Han Chen. All rights reserved.
+                Copytight &copy; 2022 Bo-Han Chen
             </footer>
         </div>
 
