--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                             </div>
                         </div>
                         <p class="mt-3">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit molestias incidunt unde, dolores vero explicabo nemo, ea expedita debitis dolor, officia recusandae? Iure et ipsum ducimus, molestias distinctio cupiditate porro?
+                            I like to work with a group of people. During my Ph.D., I got used to communicating and collaborating with people from different countries. The best part of working in a team is that I always knew when and whom to ask for help, instead of fighting alone. I also like to improvise. I am very fond of putting crazy ideas into practice with whatever we have. After all, we scientists don't always have the right tool in hand for our projects ;) 
                         </p>
                     </div>
                     
