update new publication
update new publication

--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                             <li class="skill-item col-6 col-lg-3">
                                 <img src="assets/img/logos/nonlinear-optics/nonlinear-nopa.png" alt=""  class="img-fluid">
                                 <div class="skill-item-title">
-                                    Non-colinear Optical Parametric Amplification (NOPA)
+                                    Non-collinear Optical Parametric Amplification (NOPA)
                                 </div>
                             </li>
                             <li class="skill-item col-6 col-lg-3">
