--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
             <!-- Footer -->
             <footer>
                 Website built with Bootstrap 5 and Vue 3.<br>
-                Copytight &copy; 2022 Bo-Han Chen
+                Copyright &copy; 2022 Bo-Han Chen
             </footer>
         </div>
 
