--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
                                             </div>
                                             <li class="list-item">
                                                 <strong>
-                                                    Birthday:
+                                                    Birth year:
                                                 </strong>
                                                 <span>
-                                                    17 March 1991
+                                                    1991
                                                 </span>
                                             </li>
                                             <li class="list-item">
