Add project list
add project list

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <link rel="stylesheet" href="assets/fontawsome/css/brands.min.css">
         <link rel="stylesheet" href="assets/fontawsome/css/solid.min.css">
         <link rel="stylesheet" href="assets/fontawsome/css/fontawesome.min.css">
+
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 
@@ -34,6 +35,7 @@
         <script src="js/jquery-3.6.1.min.js"></script>
         <script src="js/vue.global.js"></script>
         <script src="js/publication.js"></script>
+        <script src="js/projectList.js"></script>
 
         <style>
             @media screen and (min-width: 768px) {
@@ -299,6 +301,7 @@
                             </div>
                             <div class="projects">
                                 <h5>Projects:</h5>
+
                                 <ul class="project-list fa-ul">
                                     <li class="project-item">
                                         <span class="fa-li">
