add new projects
add new projects

--- a/index.html
+++ b/index.html
@@ -307,7 +307,31 @@
                                         <span class="fa-li">
                                             <i class="fa-solid fa-wrench"></i>
                                         </span>
-                                        Designing and building high-speed spectrometer for ultrafast transient absorption spectroscopy (in collaboration with <i>Victoria University of Wellington</i>).
+                                        Designing and building imaging system for UV LED transfer machine.
+                                    </li>
+                                    <li class="project-item">
+                                        <span class="fa-li">
+                                            <i class="fa-solid fa-wrench"></i>
+                                        </span>
+                                        Inspecting and fixing a commercial Raman microscope.
+                                    </li>
+                                    <li class="project-item">
+                                        <span class="fa-li">
+                                            <i class="fa-solid fa-wrench"></i>
+                                        </span>
+                                        Building a new website for <a href="https://nthu-upl.github.io/" target="_blank">Ultrafast Photonics Lab (UPL)</a>.
+                                    </li>
+                                    <li class="project-item">
+                                        <span class="fa-li">
+                                            <i class="fa-solid fa-wrench"></i>
+                                        </span>
+                                        Designing and building VIS + NIR spectrometer for full spectrum (450 - 1600 nm) measurement.
+                                    </li>
+                                    <li class="project-item">
+                                        <span class="fa-li">
+                                            <i class="fa-solid fa-wrench"></i>
+                                        </span>
+                                        Designing and building high-speed spectrometer for ultrafast transient absorption spectroscopy.
                                     </li>
                                     <li class="project-item">
                                         <span class="fa-li">
@@ -344,6 +368,24 @@
                                             <i class="fa-solid fa-magnifying-glass"></i>
                                         </span>
                                         Studying the ultrafast dynamics of 2D materials (MoS<sub>2</sub>, MoSe<sub>2</sub>, WS<sub>2</sub>) and novel light-emitting materials (perovskite) (in collaboration with the <i>department of Materials Science and Engineering</i>, <i>department of Chemistry of National Tsing Hua University (NTHU)</i> and the <i>Department of Electronic Engineering of Ming Chi University of Technology</i>).
+                                    </li>
+                                    <li class="project-item">
+                                        <span class="fa-li">
+                                            <i class="fa-solid fa-magnifying-glass"></i>
+                                        </span>
+                                        Studying the effects of laser pulse duration on laser welding.
+                                    </li>
+                                    <li class="project-item">
+                                        <span class="fa-li">
+                                            <i class="fa-solid fa-magnifying-glass"></i>
+                                        </span>
+                                        Experimentally studying the physics behind impulsive stimulated Raman scattering (ISRS).
+                                    </li>
+                                    <li class="project-item">
+                                        <span class="fa-li">
+                                            <i class="fa-solid fa-magnifying-glass"></i>
+                                        </span>
+                                        Developing new experimental setup for voltage-dependent transient absorption measurements.
                                     </li>
                                 </ul>
                             </div>
