--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#exp_skill">
-                            Skills & Expertise
+                            Expertise & Skills
                         </a>
                     </li>
                     <li class="nav-item">
