--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                                 National Tsing Hua University
                             </h3>
                             <div class="subheading">
-                                Postdoc researcher / Alternative service
+                                <i class="fa-solid fa-microscope"></i> Postdoc researcher // <i class="fa-solid fa-person-military-pointing"></i> R&D Alternative milirary service
                             </div>
                             <div class="department">
                                 Institute of Photonics Technologies (IPT)
@@ -363,7 +363,7 @@
                                 Universität Konstanz
                             </h3>
                             <div class="subheading">
-                                Postdoc researcher
+                                <i class="fa-solid fa-microscope"></i> Postdoc researcher
                             </div>
                             <div class="department">
                                 Fachbereich Physik
