--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                                 National Tsing Hua University
                             </h3>
                             <div class="subheading">
-                                <i class="fa-solid fa-microscope"></i> Postdoc researcher // <i class="fa-solid fa-person-military-pointing"></i> R&D Alternative milirary service
+                                <i class="fa-solid fa-microscope"></i> Postdoc researcher // <i class="fa-solid fa-person-military-pointing"></i> R&D Alternative military service
                             </div>
                             <div class="department">
                                 Institute of Photonics Technologies (IPT)
