Update publication information
update publication information

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- JS -->
         <script src="js/popper.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
-        <script src="js/mani.js"></script>
+        <script src="js/main.js"></script>
         <script src="js/jquery-3.6.1.min.js"></script>
         <script src="js/vue.global.js"></script>
         <script src="js/publication.js"></script>
