--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="My resume" />
         <meta name="author" content="Bo-Han Chen" />
-        <meta property="og:title" content="Bo-Han Chen 陳柏翰"></meta>
+        <meta property="og:title" content="Dr. Bo-Han Chen 陳柏翰"></meta>
         <meta property="og:type" content="Resume 個人網頁履歷"></meta>
         <meta property="og:url" content="https://bchen-tw.github.io"></meta>
         <meta property="og:image" content="assets/img/profile.jpg"></meta>
