--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <script src="js/publication.js"></script>
         <script src="js/postdoc_project_konstanz.js"></script>
         <script src="js/postdoc_project_nthu.js"></script>
+        <script src="js/professor_project_nthu.js"></script>
         <script src="js/skill_nonlinear_optics.js"></script>
         <script src="js/skill_ultrafast_optics.js"></script>
         <script src="js/skill_ultrafast_spectroscopy.js"></script>
@@ -296,16 +297,11 @@
                                 National Tsing Hua University
                             </h3>
                             <div class="subheading">
-                                <i class="fa-solid fa-microscope"></i> Postdoc researcher // <i class="fa-solid fa-person-military-pointing"></i> R&D Alternative military service
+                                <i class="fa-solid fa-user-tie"></i> Assistant Professor </i>
                             </div>
                             <div class="department">
+                                Department of Electrical Engineering (EE) <br>
                                 Institute of Photonics Technologies (IPT)
-                            </div>
-                            <div class="professor">
-                                <strong>Professor: </strong>
-                                <a href="http://www.ipt.nthu.edu.tw/ultrafast/" target="_blank">
-                                    Prof. Dr. Shang-Da Yang
-                                </a>
                             </div>
                             <div class="projects">
                                 <h5>Projects:</h5>
@@ -350,7 +346,74 @@
                         </div>
                         <div class="flex-shrink-0 edu-time mt-2 mt-md-0">
                             <span class="text-primary">
-                                Apr. 2021 - Now
+                                Aug. 2024 - Present
+                            </span>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-shrink-0 d-flex justify-content-center align-items-lg-center pb-3">
+                            <img src="assets/img/logos/school-logo/NTHU_rounded.png" alt="" class="school-logo w-100 h-100">
+                        </div>
+                        <div class="flex-grow-1 exp-info">
+                            <h3 class="uni-name">
+                                National Tsing Hua University
+                            </h3>
+                            <div class="subheading">
+                                <i class="fa-solid fa-microscope"></i> Postdoc researcher // <i class="fa-solid fa-person-military-pointing"></i> R&D Alternative military service
+                            </div>
+                            <div class="department">
+                                Institute of Photonics Technologies (IPT)
+                            </div>
+                            <div class="professor">
+                                <strong>Professor: </strong>
+                                <a href="http://www.ipt.nthu.edu.tw/ultrafast/" target="_blank">
+                                    Prof. Dr. Shang-Da Yang
+                                </a>
+                            </div>
+                            <div class="projects">
+                                <h5>Projects:</h5>
+
+                                <ul class="project-list fa-ul">
+                                    <li class="project-item" v-for="project in projects_nthu_postdoc">
+                                        <div v-if="project.isBuilding">
+                                            <span class="fa-li">
+                                                <i class="fa-solid fa-wrench"></i>
+                                            </span>
+                                            <span v-html="project.description">
+                                                {{project.description}}
+                                            </span>
+                                        </div>
+                                        <div v-if="project.isResearching">
+                                            <span class="fa-li">
+                                                <i class="fa-solid fa-magnifying-glass"></i>
+                                            </span>
+                                            <span v-html="project.description">
+                                                {{project.description}}
+                                            </span>
+                                        </div>
+                                        <div v-if="project.isVisiting">
+                                            <span class="fa-li">
+                                                <i class="fa-regular fa-handshake"></i>
+                                            </span>
+                                            <span v-html="project.description">
+                                                {{project.description}}
+                                            </span>
+                                        </div>
+                                        <div v-if="project.isEducating">
+                                            <span class="fa-li">
+                                                <i class="fa-solid fa-person-chalkboard"></i>
+                                            </span>
+                                            <span v-html="project.description">
+                                                {{project.description}}
+                                            </span>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="flex-shrink-0 edu-time mt-2 mt-md-0">
+                            <span class="text-primary">
+                                Apr. 2021 - Jul. 2024
                             </span>
                         </div>
                     </div>
