--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     Bo-Han Chen
                 </span>
                 <span class="d-none d-xl-block">
-                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="Portrait photo" />
+                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile_NTHU02.jpg" alt="Portrait photo" />
                 </span>
             </a>
 
@@ -118,7 +118,7 @@
         <div class="container-fluid p-0" id="mainText">
             <!-- 大頭貼 -->
             <div id="portrait" class="d-md-none">
-                <img src="assets/img/profile.jpg" alt="" class="rounded-circle">
+                <img src="assets/img/profile_NTHU02.jpg" alt="" class="rounded-circle">
             </div>
             <!-- About (Jumbotron)-->
             <section class="resume-section" id="jumbotron">
@@ -153,9 +153,9 @@
                     <div class="mb-0">
                         <div class="row d-flex flex-column flex-md-row align-items-md-center">
                             <div class="col-12 col-md-6 d-flex flex-column align-items-center">
-                                <img src="assets/img/about_photo_compressed.jpg" alt="" class="w-100">
+                                <img src="assets/img/about_photo_compressed02.jpeg" alt="" class="w-100">
                                 <p style="font-size: 14px; color: #888;">
-                                    Zürich, Switzerland
+                                    Kjerag, Norway
                                 </p>
                             </div>
                             <div class="col-12 col-md-6">
